# galore-services

./: .gitignore  Makefile  README.md  api-service.env.example  docker-compose.yml  embedding-service.env.example  go.mod  go.sum  main.go  sqlc.json  sqlc.yml
api/: aiCocktails.go  auth.go  categories.go  cocktails.go  common.go  fileHandler.go  flavours.go  helpers.go  likedCocktails.go  likedFlavours.go  liked_cocktails.go  main_test.go  middleware.go  notificationTypes.go  notification_types.go  (+4 more)
api-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.env.example  go.mod  go.sum  main.go  sqlc.json
categorize-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  categorizer.py  config.py  main.py  pyproject.toml  requirements.txt  utils.py
categorize-service/internal/config/: __init__.py  config.py  utils.py
categorize-service/internal/models/: __init__.py  category.py  detailed_cocktail.py  flavour_map.py  ingredient.py  ingredient_dto.py  instructions_dto.py
categorize-service/internal/services/: __init__.py  categorizer.py
categorize-service/models/: category.py  detailed_cocktail.py  flavour_map.py  ingredient.py  ingredient_dto.py  instructions_dto.py
categorize-service/tests/: conftest.py  test_categorizer.py  test_main.py  test_utils.py
embedding-service/: Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
embedding-service/internal/config/: config.py
embedding-service/internal/models/: __init__.py  model.py
embedding-service/models/: model.py
(+457 files in other folders)
