[project]
name = "categorize-service"
version = "1.1.0"
description = "Categorization service for Galore"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[all]>=0.127.0",
  "pydantic>=2.12.5",
  "python-dateutil>=2.9.0.post0",
  "requests>=2.32.5",
  "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
]
